src/test/ui/traits/trait-upcasting/issue-11515-upcast-fn_mut-fn.stderr
error[E0308]: mismatched types
  --> $DIR/issue-11515-upcast-fn_mut-fn.rs:9:33
   |
LL |     let test = box Test { func: closure };
   |                                 ^^^^^^^ expected trait `std::ops::FnMut`, found trait `std::ops::Fn`
   |
   = note: expected struct `std::boxed::Box<(dyn std::ops::FnMut() + 'static)>`
              found struct `std::boxed::Box<(dyn std::ops::Fn() + 'static)>`
   = note: add `#![feature(trait_upcasting)]` to the crate attributes to enable trait upcasting

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
